# AgentChat

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md
.claude/: CLAUDE.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: agent_integration.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.ralph/: PROMPT.md
bindings/nodejs/: LICENSE  README.md  example_agent.ts  index.ts  package.json  tsconfig.json
bindings/python/: README.md  agentchat.h  agentchat.py  agentchat_c.cpp  example_agent.py  pyproject.toml
docs/: AGENT_API.md  ARCHITECTURE.md  COMMUNITY.md  CONTRIBUTING.md  LEGAL_FRAMEWORK.md  ROADMAP.md  SECURITY_AUDIT.md
examples/: README.md  docker-compose.yml
examples/go/: go.mod  main.go
examples/nodejs/: basic_agent.ts  multi_agent_demo.ts  package.json
examples/python/: ai_code_review.py  ai_customer_support.py  ai_research_team.py  basic_agent.py  langchain_demo.py  trading_signal_agent.py
include/agentchat/: crypto.h  mdns.h  protocol.h  types.h
landing/: app.js  index.html  styles.css
scripts/: demo.sh
src/agent/: agent_client.cpp  agent_client.h
src/client/: agent_client.cpp  main.cpp
src/core/crypto/: crypto.cpp  group_ratchet.cpp  group_ratchet.h  ratchet.cpp  ratchet.h  x3dh.cpp  x3dh.h
src/core/network/: mdns.cpp
src/core/protocol/: protocol.cpp
src/core/storage/: storage.cpp  storage.h
src/server/: acl.cpp  acl.h  main.cpp  rate_limiter.h  rest_server.h  ws_server.h
tests/: test_acl.cpp  test_crypto.cpp  test_e2ee.cpp  test_integration.cpp  test_mdns.cpp  test_nodejs_sdk.mjs  test_protocol.cpp  test_python_sdk.py  test_storage.cpp
web/: index.html  package.json  vite.config.ts
web/dev-dist/: sw.js
web/src/: App.tsx  main.tsx
web/src/components/: ActivityTicker.module.css  ActivityTicker.tsx  ChatWindow.module.css  ChatWindow.tsx  ConnectForm.module.css  ConnectForm.tsx  Identicon.tsx  MessageInput.module.css  MessageInput.tsx  Sidebar.module.css  Sidebar.tsx
web/src/hooks/: useAgentChat.ts  useMessages.ts
web/src/styles/: app.module.css  chat.module.css  global.css
web/src/types/: index.ts
web/src/utils/: protocol.ts
