[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentchat-sdk"
version = "0.1.0"
description = "Python SDK for AgentChat — secure encrypted AI agent messaging"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "AgentChat Contributors", email = "hello@agentchat.dev" }
]
requires-python = ">=3.9"
keywords = ["agentchat", "ai", "agent", "messaging", "encryption", "sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications :: Chat",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Security :: Cryptography",
]

[project.urls]
Homepage = "https://github.com/minernote/AgentChat"
Repository = "https://github.com/minernote/AgentChat"
Issues = "https://github.com/minernote/AgentChat/issues"
Documentation = "https://github.com/minernote/AgentChat/blob/main/docs/"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentchat*"]

[tool.setuptools.package-data]
"*" = ["*.dylib", "*.so", "*.h"]
